k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shopnow-deployment
  namespace: shopnow
  labels:
    app: shopnow-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: shopnow-app
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: shopnow-app
    spec:
      containers:
        - name: shopnow-container
          image: setu3011/shopnow-app:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: "100m"
              memory: "64Mi"
            limits:
              cpu: "250m"
              memory: "128Mi"
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 15
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
