k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shopnow-service
  namespace: shopnow
  labels:
    app: shopnow-app
spec:
  type: ClusterIP
  selector:
    app: shopnow-app
  ports:
    - name: http
      port: 80
      targetPort: 80
